--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,3 +33,7 @@ jobs:
           target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+          - name: Install R packages
+  run: |
+    install.packages(c("yaml", "rmarkdown", "knitr"), repos = "https://cran.rstudio.com/")
