--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,5 +35,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Install R packages
-        run: |
-    install.packages(c("yaml", "rmarkdown", "knitr"), repos = "https://cran.rstudio.com/")
+        run: install.packages(c("yaml", "rmarkdown", "knitr"), repos = "https://cran.rstudio.com/")
